First working version

--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
+                <span id="myLog">This is the log</span>
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
